<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.javier.edukka.view.ClassActivity">
    <item
        android:id="@+id/add_class"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/enter_class"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/rem_class"
        android:icon="@drawable/ic_remove_circle_outline_white_24dp"
        android:title="@string/leave_class"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"/>
</menu>