...
                android:scaleType="centerCrop"
                android:layout_marginBottom="@dimen/md_keylines_x8"
                android:padding="@dimen/md_keylines_x12"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
...
                android:textColor="?attr/colorAccent"
                android:text="@string/identifier"
                android:textSize="@dimen/article_title"
                android:layout_marginTop="@dimen/md_keylines_x3" />

            <TextView
                android:id="@+id/class_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3" />

            <TextView
                android:layout_width="match_parent"
...
